# SD_Projekt2

./: CMakeLists.txt
src/: AVLTree.cpp  AVLTree.hpp  Analysis.cpp  Analysis.hpp  BinarySearchTree.hpp  CMakeLists.txt  Collection.cpp  Collection.hpp  Element.cpp  Element.hpp  Heap.cpp  Heap.hpp  Node.hpp  PriorityQueue.hpp  Utils.cpp  Utils.hpp  main.cpp
test/: AVLTreeTests.cpp  CMakeLists.txt  ElementTests.cpp  HeapTests.cpp  NodeTests.cpp
